--- a/NewGalFinder/Makefile
+++ b/NewGalFinder/Makefile
@@ -26,7 +26,7 @@ INCLUDES = -I$(FFTW)/include
 
 DFLAGS = -DNMEG=90000L
 
-OPT = -g  -qopenmp -DINDEX -DVarPM   -DXYZDBL -DNENER=0 -DNPRE=8 -DREAD_SINK -DNCHEM=3 -DADV
+OPT = -g  -qopenmp -DINDEX -DVarPM   -DXYZDBL -DNENER=0 -DNPRE=8 -DREAD_SINK -DNCHEM=9 -DNDUST=4 -DADV
 
 FFLAGS = $(FDFLAGS) $(OPT)  -mcmodel=medium
 CFLAGS = $(DFLAGS)  $(OPT) $(INCLUDES)  -DDEBUG=1 -DLOG=1
